--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "connect-redis",
+  "name": "@maxsol/connect-redis-knex",
   "description": "Redis session store for Connect",
   "version": "8.0.1",
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
@@ -29,7 +29,9 @@
     "test": "vitest run --silent --coverage",
     "lint": "tsc --noemit && eslint --max-warnings 0 testdata *.ts",
     "fmt": "prettier --write .",
-    "fmt-check": "prettier --check ."
+    "fmt-check": "prettier --check .",
+    "release": "release-it",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -54,7 +56,13 @@
     "typescript-eslint": "^8.16.0",
     "vite": "^6.0.1",
     "vite-plugin-dts": "^4.3.0",
-    "vitest": "^2.1.6"
+    "vitest": "^2.1.6",
+    "knex": "git@github.com:rustama1211/knex.git#v3.1.2",
+    "mysql": "^2.18.1",
+    "pg": "^8.11.3",
+    "sqlite3": "^5.1.6",
+    "release-it": "18.1.2",
+    "husky": "9.1.7"
   },
   "peerDependencies": {
     "express-session": ">=1"
