--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/tj/connect-redis.git"
+    "url": "git+ssh://git@github.com:rustama1211/connect-redis.git"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
