--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@maxsol/connect-redis-knex",
   "description": "Redis session store for Connect",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "8.0.1",
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "contributors": [
