--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "contributors": [
     "Marc Harter <wavded@gmail.com>"
   ],
+  "type": "module",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
